--- a/Part 6 - Project Planner/project-planner/package.json
+++ b/Part 6 - Project Planner/project-planner/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@material/web": "^1.5.1",
     "core-js": "^3.8.3",
     "json-server": "^1.0.0-beta.1",
     "vue": "^3.2.13",
